# elf-parser

./: CMakeLists.txt  README.md
include/elfparser/: elf_parser.hpp  elf_types.hpp
include/utils/: byte_iterator.hpp  read_bytes.hpp
src/: elf_parser.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
